# vivarium-interface

./: .gitignore  AUTHORS.md  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: pytest.yml
notebooks/: 01_getting_started.ipynb  02_spatio_flux.ipynb  03_genecoli.ipynb  demo.html  demo.ipynb
test_data/: demo1.json
tests/: test_vivarium.py
vivarium/: __init__.py  builder.py  dict_to_object.py  function.py  plotting.py  results.py  tests.py  utils.py  vivarium.py
vivarium/notebooks/: demo.ipynb
